--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,5 +1,6 @@
 <%- include("../partials/header"); -%>
 <h1>Home page </h1>
+<h4>Rahad</h4>
 
   <h1 class="font-bold text-center text-red-600 text-5xl pt-10">Hellow Tailwind CSS</h1>
 
