--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OClock - Time Tracking</title>
-  <link rel="stylesheet" href="../../css/main.css">
+  <title>Document</title>
 </head>
 <body>
-  <%- include("./nav.ejs"); -%>
-  <div class="container">
+  
+</body>
+</html>
