--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,6 @@
-<footer>Made With Footer</footer>
+</div>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script src="../../js/nav.js"></script>
 </body>
 </html>
