update Controller and Route

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -38,7 +38,7 @@
           <h1>OClock-Time Tracking</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit cum illo </p>
         </div>
-        <img src="./img/time.svg" class="image" alt="">
+        <img src="../../img/time.svg" class="image" alt="">
       </div>
     </div>
   </div>
