--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,7 +11,7 @@
     <li class="list">
       <b></b>
       <b></b>
-      <a href="timeTracker.html">
+      <a href="">
         <span class="icon"><ion-icon name="time-outline"></ion-icon></span>
         <span class="title">Time Tracker</span>
       </a>
