create register (controller/route/model )

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,10 +3,10 @@
     <li class="list active">
       <b></b>
       <b></b>
-        <a href="/dashboard">
-          <span class="icon"><ion-icon name="grid-outline"></ion-icon></span>
-          <span class="title">Home</span>
-        </a>
+      <a href="/dashboard">
+        <span class="icon"><ion-icon name="grid-outline"></ion-icon></span>
+        <span class="title">Home</span>
+      </a>
     </li>
     <li class="list">
       <b></b>
@@ -15,23 +15,34 @@
         <span class="icon"><ion-icon name="time-outline"></ion-icon></span>
         <span class="title">Time Tracker</span>
       </a>
-  </li>
-  <li class="list">
-    <b></b>
+    </li>
+    <li class="list">
       <b></b>
-    <a href="#">
-      <span class="icon"><ion-icon name="calendar-number-outline"></ion-icon></span>
-      <span class="title">Calender</span>
-    </a>
-</li>
-<li class="list">
-  <b></b>
       <b></b>
-  <a href="#">
-    <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
-    <span class="title">Projects</span>
-  </a>
-</li>
+      <a href="#">
+        <span class="icon"
+          ><ion-icon name="calendar-number-outline"></ion-icon
+        ></span>
+        <span class="title">Calender</span>
+      </a>
+    </li>
+    <li class="list">
+      <b></b>
+      <b></b>
+      <a href="#">
+        <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
+        <span class="title">Projects</span>
+      </a>
+    </li>
+
+    <li class="list">
+      <b></b>
+      <b></b>
+      <a href="/register">
+        <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
+        <span class="title">Register</span>
+      </a>
+    </li>
   </ul>
 </div>
 <!-- <div class="toggle">
