--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -9,7 +9,7 @@
   crossorigin="anonymous"
 ></script>
 <link rel="stylesheet" href="../../css/login.css">
-  <title>Document</title>
+  <title><%= title %> </title>
 </head>
 <body>
   <div class="container">
