--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,18 +1,22 @@
 <%- include("../partials/header"); -%>
 <div class="flex items-center justify-center min-h-screen ">
-    <div class="px-8 py-6 mx-4 mt-4 text-left bg-gray-100 shadow-lg md:w-1/3 lg:w-1/3 sm:w-1/3 rounded-lg">
+    <div class="px-8 py-6 mx-4 mt-2 text-left bg-gray-100 shadow-lg md:w-1/3 lg:w-5/12 sm:w-1/3 rounded-lg">
         <h3 class="text-2xl font-bold text-center ">Register</h3>
         <form action="/register" method="POST">
             <div class="mt-2">
                 <div>
                     <label class="" for="Name">Name<label>
                             <input type="text" name="userName" placeholder="Name"
-                                class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
+                                class=" <%= error.userName ? ' bg-red-200': '' %> w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600" value="<%= value.userName ? value.userName : '' %>">
+                                <p class="text-red-500 text-sm p-1"><%= error.userName  %></p>
+                                
                 </div>
                 <div class="mt-2">
                     <label  for="Phone">Phone Number<label>
                             <input type="number" name="userPhone" placeholder="Phone Number"
-                                class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
+                                class="<%= error.userPhone ? 'bg-red-200': '' %> w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600" value="<%= value.userPhone ? value.userPhone : '' %>">
+                                                                <p class="text-red-500 text-sm p-1"><%= error.userPhone  %></p>
+
                 </div>
               <div class="mt-2">
                 <label>User Role</label>
@@ -31,24 +35,23 @@
                 <div class="mt-2">
                     <label  for="email">Email<label>
                             <input type="email" name="userMail" placeholder="Email"
-                                class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
+                                class="<%= error.userMail ? 'bg-red-200' : '' %>  w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600" value="<%= value.userMail ? value.userMail : ''%>">
+                                                                <p class="text-red-500 text-sm p-1"><%= error.userMail  %></p>
+
                 </div>
                 <div class="mt-2">
                     <label>Password<label>
                             <input type="password" name="userPass" placeholder="Password"
-                                class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
+                                class="<%= error.userPass ? 'bg-red-200' : '' %> w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600" value="<%= value.userPass ? value.userPass : '' %>">
+                                <p class="text-red-500 text-sm p-1"><%= error.userPass  %></p>
+
                 </div>
                 
                 <div class="flex">
-                    <button class="w-full px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-900">Create
+                    <button type="submit" class="w-full px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-600">Create
                         User</button>
                 </div>
-                <div class="mt-6 text-grey-dark">
-                    Already have an account?
-                    <a class="text-blue-600 hover:underline" href="#">
-                        Log in
-                    </a>
-                </div>
+               
             </div>
             
         </form>
