--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,11 +1,11 @@
 <div class="navigation">
   <ul>
-    <li class="list active">
+    <li class="list">
       <b></b>
       <b></b>
       <a href="/dashboard">
         <span class="icon"><ion-icon name="grid-outline"></ion-icon></span>
-        <span class="title">Home</span>
+        <span class="title">Dashboard</span>
       </a>
     </li>
     <li class="list">
