--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -9,21 +9,25 @@
   crossorigin="anonymous"
 ></script>
 <link rel="stylesheet" href="../../css/login.css">
+
+
   <title><%= title %> </title>
 </head>
 <body>
   <div class="container">
-    <div class="forms-container">
+     <div class="forms-container">
       <div class="signin">
-        <form action="/login" class="singin-form" >
+        <form action="/" class="singin-form"  method="POST">
           <h2 class="title">Sign in</h2>
           <div class="input-field">
             <i class="fas fa-user" ></i>
-            <input type="text" placeholder="Email or Username">
+            <input type="text" name="userMail" placeholder="Email or Username" class="<%= error.userMail ? 'error' : '' %>" value="<%= value.userMail ? value.userMail : '' %>">
+            <p class="text-red-500 text-sm p-1"><%= error.userMail %></p>
             </div>
             <div class="input-field">
               <i class="fas fa-lock" ></i>
-              <input type="password" placeholder="Password">
+              <input type="password" name="userPass" placeholder="Password" class="<%= error.userPass ? 'error' : '' %>" value="<%= value.userPass ? value.userPass : '' %>">
+              <p class="text-red-500 text-sm p-1"><%= error.userPass %> </p>
             </div>
             <input type="submit" value="Login" class="btn solid">
           </div>
