--- a/public/css/login.css
+++ b/public/css/login.css
@@ -242,6 +242,9 @@ form{
 
 }
 /* error class for login form  */
+.error-msg{
+  color: red;
+}
 .error{
-  outline: 1px solid red;
+  color:  red;
 }
