--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -38,9 +38,9 @@
     <li class="list">
       <b></b>
       <b></b>
-      <a href="/register">
+      <a href="/add-user">
         <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
-        <span class="title">Register</span>
+        <span class="title">Add User</span>
       </a>
     </li>
   </ul>
