--- a/views/pages/addUser.ejs
+++ b/views/pages/addUser.ejs
@@ -1,8 +1,8 @@
 <%- include("../partials/header"); -%>
 <div class="flex items-center justify-center min-h-screen ">
     <div class="px-8 py-6 mx-4 mt-2 text-left bg-gray-100 shadow-lg md:w-1/3 lg:w-5/12 sm:w-1/3 rounded-lg">
-        <h3 class="text-2xl font-bold text-center ">Register</h3>
-        <form action="/register" method="POST">
+        <h3 class="text-2xl font-bold text-center ">Add User</h3>
+        <form action="/add-user" method="POST">
             <div class="mt-2">
                 <div>
                     <label class="" for="Name">Name<label>
