--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -38,7 +38,7 @@
     <li class="list">
       <b></b>
       <b></b>
-      <a href="/register">
+      <a href="/user">
         <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
         <span class="title">Register</span>
       </a>
