--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -5,6 +5,8 @@
   Hellow Tailwind CSS
 </h1>
 
+<h5>Gazi Rahad</h5>
+
 <div class="md:container md:mx-auto">
   <% if(user) { %>
   <h4>User: <%= user[0].user_name %></h4>
