--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -8,7 +8,9 @@
   src="https://kit.fontawesome.com/64d58efce2.js"
   crossorigin="anonymous"
 ></script>
-<link rel="stylesheet" href="../../css/login.css">
+<link rel="stylesheet" href="css/login.css">
+<link rel="stylesheet" href="css/vendors/toastify.css">
+<script src="js/vendors/toastify.js"></script>
 
 
   <title><%= title %> </title>
