--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,8 @@
   
   <link rel="stylesheet" href="../../css/main.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/vendors/toastify.css">
+  <script src="js/vendors/toastify.js"></script>
 </head>
 <body>
   <%- include("./nav.ejs"); -%>
