--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,10 +16,15 @@ body{
 .container{
   padding-left: 270px;
   padding-top:80px ;
+  transition: 0.5s;
+}
+.container.active{
+  padding-left: 90px;
+
 }
 .navigation{
   position: fixed;
-  top: 0px;
+  top: 60px;
   bottom: 20px;
   height: 100%;
   width: 250px;
@@ -129,7 +134,6 @@ body{
   left: 10px;
   height: 50px;
   width: 50px;
-  background: #4d5bf9;
   border-radius: 10px;
   cursor: pointer;
   display: flex;
@@ -144,14 +148,6 @@ body{
   color: #fff;
   font-size: 34px;
 }
-/* .toggle ion-icon.open,
-.toggle.active ion-icon.close{
-  display: block;
-}
-.toggle ion-icon.close,
-.toggle.active ion-icon.open{
-  display: none;
-} */
 .start{
   display: flex;
   flex-wrap: wrap;
@@ -285,5 +281,21 @@ body{
 .modal-close:hover {
   color: black;
 }
-
-/* error class for register form  */
+.head{
+  width: 100%;
+  height: 60px;
+  background: #4d5bf9;
+  position: fixed;
+}
+.head ul li{
+  position: relative;
+  float: right;
+  padding: 16px;
+  font-size: 22px;
+  color: #fff;
+}
+.btn-logout a{
+  background-color: rgba(255, 23, 73, 0.87);
+  padding: 5px 10px;
+  border-radius: 5px;
+}
