js & css, minify, error page design & toast alert
6 package install in dev dependencies (@babel/core/@babel/preset-env/babelloader/webpack/weebpack-cli/cssnano)
unauthorized  error page design
added user success then show toast alert

--- a/views/pages/addUser.ejs
+++ b/views/pages/addUser.ejs
@@ -57,5 +57,22 @@
     </div>
 </div>
 
+
+
+
 <%- include("../partials/footer"); -%>
 
+<script>
+  
+  const successAddedUser = Toastify({
+    text : "Added user successfully!",
+    duration: 3000,
+  })       
+  if("<%= addUser %>" === "true"){
+    successAddedUser.showToast()
+    setTimeout(()=>{
+    location.href = "/add-user"
+   },2000)
+  }
+
+</script>
