--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -56,9 +56,10 @@
   </div>
 </body>
 </html>
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
 
 <script >
+  
   let auth =  '<%= auth %>';
   let signIn =  '<%= signIn %>';
   const authFailToast = Toastify({
