--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,14 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= title %></title>
-  </head>
-  <body>
-    <p><%= error.message %></p>
-    <p><%= error.status %></p>
-    <p><%= error.stack %></p>
-  </body>
-</html>
+<%- include("../partials/header"); -%>
+
+<div class="text-center">
+  <h1 class="font-bold md:mt-12 md:p-4 text-red-500 text-3xl">
+    <%= "Status" + "-" + error.status + ", " + error.message %>
+  </h1>
+
+  <p class="text-sm ml-12 text-red-400 text-justify mt-5"><%= error.stack %></p>
+  <a href="/">
+    <button
+      class="
+        bg-blue-500
+        hover:bg-blue-400
+        text-white
+        font-bold
+        py-2
+        px-4
+        mt-7
+        border-b-4 border-blue-700
+        hover:border-blue-500
+        rounded
+      "
+    >
+      GO BACK
+    </button></a
+  >
+</div>
+
+<p><%# error.status %></p>
+<p><%# error.stack %></p>
+<%- include("../partials/footer"); -%>
