--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -1,7 +1,23 @@
-<%- include("../partials/header"); -%>
-
-<div>
-  <h1 class="text-center font-bold mt-12 p-10 text-7xl">🙄404 not found!</h1>
-</div>
-
-<%- include("../partials/footer"); -%>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/404.css">
+  <title>404</title>
+</head>
+<body>
+  <div id="notfound">
+    <div class="notfound">
+    <div class="notfound-404">
+    <h1>:(</h1>
+    </div>
+    <h2>404 - Page not found</h2>
+    <p>The page you are looking for might have been removed had its name changed or is temporarily unavailable.</p>
+    <p>url : <%=url%></p>
+    <a href="/">home page</a>
+    </div>
+    </div>
+</body>
+</html>
