--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -2,7 +2,10 @@
 
 <div class="text-center">
   <h1 class="font-bold md:mt-12 md:p-4 text-red-500 text-3xl">
-    <%= "Status" + "-" + error.status + ", " + error.message %>
+    <%if(error && error.status){%> 
+      <%= "Status" + "-" + error.status %>
+    <% } %> 
+  </br> <%=error.message %> 
   </h1>
 
   <p class="text-sm ml-12 text-red-400 text-justify mt-5"><%= error.stack %></p>
