--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -54,12 +54,26 @@
       </div>
     </div>
   </div>
-</body>
-</html>
-<!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
+
+<script src="js/bundle.js"></script>
 
 <script >
-  
+  const input = document.querySelectorAll('.input-field input')
+  for(var x=0;x<input.length;x++){
+    input[x].addEventListener('keyup',function (e){
+        if(e.keyCode ===9){
+          e.target.style.outline ='2px solid black'
+        }
+    })
+    input[x].addEventListener('keydown',function (e){
+        if(e.keyCode ===9){
+          e.target.style.outline =''
+        }
+    })
+  }
+  function mOverImg(e) {                
+    e.target.querySelector("img").style.ou="1";                
+}
   let auth =  '<%= auth %>';
   let signIn =  '<%= signIn %>';
   const authFailToast = Toastify({
@@ -80,3 +94,5 @@
    },2000)
   }
 </script>
+</body>
+</html>
