--- a/views/pages/addUser.ejs
+++ b/views/pages/addUser.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header"); -%>
-<div class="flex items-center justify-center min-h-screen ">
+<div class="flex items-center justify-center min-h-screen" id="add-user">
     <div class="px-8 py-6 mx-4 mt-2 text-left bg-gray-100 shadow-lg md:w-1/3 lg:w-5/12 sm:w-1/3 rounded-lg">
         <h3 class="text-2xl font-bold text-center ">Add User</h3>
         <form id="createUser"  action="/add-user" method="POST">
@@ -157,14 +157,14 @@ createUser.addEventListener('submit', (e) => {
   e.preventDefault()
   
   
-  if(!userName.value || !userPhone.value || !userMail.value || !userPass.value){
+  if(!userName.value || !userPhone.value || !userMail.value || userPass.value < 6){
     checkRequired([userName,userMail,userPhone,userPass])
-    
-      
-  }else{
     checkLength(userName, 4, 15)
     checkLength(userPass, 6, 25)
     checkEmail(userMail)
+      
+  }else{
+    
     createUser.submit()
   }
 })
