--- a/views/pages/addUser.ejs
+++ b/views/pages/addUser.ejs
@@ -3,6 +3,23 @@
     <div class="px-8 py-6 mx-4 mt-2 text-left bg-gray-100 shadow-lg md:w-1/3 lg:w-5/12 sm:w-1/3 rounded-lg">
         <h3 class="text-2xl font-bold text-center ">Add User</h3>
         <form id="createUser"  action="/add-user" method="POST">
+
+          <!-- Image upload -->
+
+          <!-- component -->
+<div class=" mt-2 flex justify-center">
+  <div class="bg-white  py-4 rounded-lg shadow-lg text-center w-40">
+    <div class="mb-2">
+     
+      <img class="w-auto mx-auto rounded-full  object-cover object-center"  src="https://img.icons8.com/color/96/000000/person-skin-type-7.png"/>
+    </div>
+    <label class="cursor-pointer">
+      <span class="mt-2 text-base leading-normal px-4 py-2 bg-blue-500 text-white text-sm rounded-full" >Select Image</span>
+      <input type='file' class="hidden"  :accept="accept" />
+    </label>
+  </div>
+</div>
+          <!-- End image upload-->
             <div class="mt-2">
                 <div >
                     <label class="" for="Name">Name<label>
@@ -13,14 +30,14 @@
                                 <p class="text-red-500 text-sm p-1"><%= error.userName  %></p>
                                 
                 </div>
-                <div class="mt-2">
+                <div>
                     <label  for="Phone">Phone Number<label>
                             <input id="userPhone" type="number" name="userPhone" placeholder="Phone Number"
                                 class="<%= error.userPhone ? 'error border': '' %> w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600" value="<%= value.userPhone ? value.userPhone : '' %>">          <small>Error message</small>
 
                                                  <p class="text-red-500 text-sm p-1"><%= error.userPhone  %></p>
 
-              <div class="mt-2">
+              <div class="">
                 <label>User Role</label>
                 <div class="mt-2">
                   <label class="inline-flex items-center">
@@ -34,7 +51,7 @@
                 </div>
               </div>
 
-                <div class="mt-2">
+                <div class="">
                     <label  for="email">Email<label>
                             <input id="userMail" type="email" name="userMail" placeholder="Email"
                                 class="<%= error.userMail ? 'error border' : '' %>  w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600" value="<%= value.userMail ? value.userMail : ''%>">
@@ -43,7 +60,7 @@
                                                                 <p class="text-red-500 text-sm p-1"><%= error.userMail  %></p>
 
                 </div>
-                <div class="mt-2">
+                <div class="">
                     <label>Password<label>
                             <input id="userPass" type="password" name="userPass" placeholder="Password"
                                 class="<%= error.userPass ? 'error border' : '' %> w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600" value="<%= value.userPass ? value.userPass : '' %>">
@@ -54,7 +71,7 @@
                 </div>
                 
                 <div class="flex">
-                    <button id="userSubmitBtn" type="submit" class="w-full px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-600">Create
+                    <button id="userSubmitBtn" type="submit" class="w-full px-6 py-2 mt-2 text-white bg-blue-600 rounded-lg hover:bg-blue-600">Create
                         User</button>
                 </div>
                
