--- a/views/pages/addUser.ejs
+++ b/views/pages/addUser.ejs
@@ -2,7 +2,7 @@
 <div class="flex items-center justify-center min-h-screen" id="add-user">
     <div class="px-8 py-6 mx-4 mt-2 text-left bg-gray-100 shadow-lg md:w-1/3 lg:w-5/12 sm:w-1/3 rounded-lg">
         <h3 class="text-2xl font-bold text-center ">Add User</h3>
-        <form id="createUser"  action="/add-user" method="POST">
+        <form id="createUser" enctype="multipart/form-data"  action="/add-user" method="POST">
 
           <!-- Image upload -->
 
@@ -11,11 +11,11 @@
   <div class="bg-white  py-4 rounded-lg shadow-lg text-center w-40">
     <div class="mb-2">
      
-      <img class="w-auto mx-auto rounded-full  object-cover object-center"  src="https://img.icons8.com/color/96/000000/person-skin-type-7.png"/>
+      <img id="img" class="w-auto mx-auto rounded-full  object-cover object-center"  src="https://img.icons8.com/color/96/000000/person-skin-type-7.png"/>
     </div>
     <label class="cursor-pointer">
       <span class="mt-2 text-base leading-normal px-4 py-2 bg-blue-500 text-white text-sm rounded-full" >Select Image</span>
-      <input type='file' class="hidden"  :accept="accept" />
+      <input type='file' name="avatar" class="hidden"  onchange="readURL(this)"  :accept="accept" />
     </label>
   </div>
 </div>
@@ -186,4 +186,18 @@ createUser.addEventListener('submit', (e) => {
   }
 })
 
+</script>
+
+<script>
+    function readURL(input) {
+    if (input.files && input.files[0]) {
+    
+      var reader = new FileReader();
+      reader.onload = function (e) { 
+        document.querySelector("#img").setAttribute("src",e.target.result);
+      };
+
+      reader.readAsDataURL(input.files[0]); 
+    }
+  }
 </script>
